Power books are assigned enchantments